some a tag changes in navbar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   Shop
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="sproduct.html">Man</a></li>
+                  <li><a class="dropdown-item" href="category.html">Man</a></li>
                   <li><a class="dropdown-item" href="#">Women</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Browse All</a></li>
