some major chnages and navbar changes

--- a/cart.html
+++ b/cart.html
@@ -44,15 +44,16 @@
               <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDropdown"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Shop
-                  </a>
+                  class="nav-link dropdown-toggle d-flex align-items-center"
+                  href="category.html"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Shop
+                  <i class="fa-solid fa-chevron-down ms-1 chevron-icon"></i>
+                </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="category.html">Man</a></li>
                     <li><a class="dropdown-item" href="#">Women</a></li>
@@ -100,7 +101,7 @@
                   class="fa-solid fa-magnifying-glass d-static d-lg-none search-icon"
                 ></i
               ></a>
-              <a href=""><i class="fa-solid fa-cart-shopping shop-icon"></i></a>
+              <a href=""><i class="fa-solid fa-cart-shopping shop-icon-active"></i></a>
               <a href=""><i class="fa-regular fa-circle-user user-icon"></i></a>
             </div>
           </div>
@@ -128,7 +129,7 @@
               <div class="cart-card">
                 <div class="product-list-div d-flex">
                   <img src="assets/images/10.png" class="cart-product-img" alt="">
-                  <div class="w-100 position-relative d-flex flex-column justify-content-around">
+                  <div class="position-relative d-flex flex-column justify-content-around gap-2 cart-product-data-outer">
                     <div class="cart-product-data">
                       <p class="mb-0 cart-product-name">Gradient Graphic T-shirt</p>
                       <p class="mb-0 cart-product-size">Size: <span>Large</span></p>
@@ -148,7 +149,7 @@
                 <hr>
                 <div class="product-list-div d-flex">
                   <img src="assets/images/3.png" class="cart-product-img" alt="">
-                  <div class="w-100 position-relative d-flex flex-column justify-content-around">
+                  <div class=" position-relative d-flex flex-column justify-content-around gap-2 cart-product-data-outer">
                     <div class="cart-product-data">
                       <p class="mb-0 cart-product-name">CHECKERED SHIRT</p>
                       <p class="mb-0 cart-product-size">Size: <span>Medium</span></p>
@@ -168,7 +169,7 @@
                 <hr>
                 <div class="product-list-div d-flex">
                   <img src="assets/images/2.png" class="cart-product-img" alt="">
-                  <div class="w-100 position-relative d-flex flex-column justify-content-around">
+                  <div class=" position-relative d-flex flex-column justify-content-around cart-product-data-outer">
                     <div class="cart-product-data">
                       <p class="mb-0 cart-product-name">SKINNY FIT JEANS</p>
                       <p class="mb-0 cart-product-size">Size: <span>Large</span></p>
