--- a/category.html
+++ b/category.html
@@ -44,15 +44,16 @@
               <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDropdown"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Shop
-                  </a>
+                class="nav-link dropdown-toggle d-flex align-items-center"
+                href="category.html"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Shop
+                <i class="fa-solid fa-chevron-down ms-1 chevron-icon"></i>
+              </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="category.html">Man</a></li>
                     <li><a class="dropdown-item" href="#">Women</a></li>
