--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="category.html"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Shop
-                </a>
+                class="nav-link dropdown-toggle d-flex align-items-center"
+                href="category.html"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Shop
+                <i class="fa-solid fa-chevron-down ms-1 chevron-icon"></i>
+              </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="category.html">Man</a></li>
                   <li><a class="dropdown-item" href="#">Women</a></li>
@@ -149,7 +150,7 @@
         <div class="row arr-row pb-4">
           <div class="col-lg-3 col-md-4 col-sm-6 col-12">
             <img src="assets/images/1.png" class="arrivals-img" alt="" id="p1" />
-            <p class="mb-0 mt-3 product-name">T-SHIRT WITH TAPE DETAILS</p>
+            <p class="mb-0 mt-3 product-name">T-shirt with tape details</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate4.5.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">4.5/<span>5</span></p>
@@ -160,7 +161,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-sm-0 mt-5">
             <img src="assets/images/2.png" class="arrivals-img" alt=""id="p2" />
-            <p class="mb-0 mt-3 product-name">SKINNY FIT JEANS</p>
+            <p class="mb-0 mt-3 product-name">Skinny fit jeans</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img
                 src="assets/images/rate3.5.png"
@@ -177,7 +178,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-5 mt-md-0 mt-sm-5">
             <img src="assets/images/3.png" class="arrivals-img" alt="" id="p3"/>
-            <p class="mb-0 mt-3 product-name">CHECKERED SHIRT</p>
+            <p class="mb-0 mt-3 product-name">Checked shirt</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate4.5.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">4.5/<span>5</span></p>
@@ -188,7 +189,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-5 mt-lg-0 mt-sm-5">
             <img src="assets/images/4.png" class="arrivals-img" alt="" id="p4"/>
-            <p class="mb-0 mt-3 product-name">SLEEVE STRIPED T-SHIRT</p>
+            <p class="mb-0 mt-3 product-name">Sleeve striped T-shirt</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate4.5.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">4.5/<span>5</span></p>
@@ -216,7 +217,7 @@
         <div class="row top-row pb-4">
           <div class="col-lg-3 col-md-4 col-sm-6 col-12">
             <img src="assets/images/5.png" class="topselling-img" alt="" id="p5"/>
-            <p class="mb-0 mt-3 product-name">VERTICAL STRIPED SHIRT</p>
+            <p class="mb-0 mt-3 product-name">Verticle Striped shirt</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate5.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">5.0/<span>5</span></p>
@@ -229,7 +230,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-sm-0 mt-5">
             <img src="assets/images/6.png" class="topselling-img" alt="" id="p6"/>
-            <p class="mb-0 mt-3 product-name">COURAGE GRAPHIC T-SHIRT</p>
+            <p class="mb-0 mt-3 product-name">Courage graphic t-shirt</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img
                 src="assets/images/rate3.5.png"
@@ -244,7 +245,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-5 mt-md-0 mt-sm-5">
             <img src="assets/images/7.png" class="topselling-img" alt="" id="p7"/>
-            <p class="mb-0 mt-3 product-name">LOOSE FIT BERMUDA SHORTS</p>
+            <p class="mb-0 mt-3 product-name">loose fit bermuda shorts</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate3.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">3.0/<span>5</span></p>
@@ -255,7 +256,7 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-5 mt-lg-0 mt-sm-5">
             <img src="assets/images/8.png" class="topselling-img" alt="" id="p8"/>
-            <p class="mb-0 mt-3 product-name">FADED SKINNY JEANS</p>
+            <p class="mb-0 mt-3 product-name">Faded skinny jeans</p>
             <div class="product-rating d-flex mt-2 mb-2">
               <img src="assets/images/rate4.5.png" class="rate-star" alt="" />
               <p class="mb-0 rate-p">4.5/<span>5</span></p>
